<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_default_padding"
    tools:context=".ui.registration.profiledata.ProfileDataFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutProfileDataName"
        style="@style/AppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_data_input_layout_hint_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputProfileDataName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutProfileDataBio"
        style="@style/AppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_margin_top"
        android:hint="@string/profile_data_input_layout_hint_bio">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputProfileDataBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonProfileDataNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_margin_top"
        android:text="@string/common_next" />

</LinearLayout>